k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chomby-deployment
  labels:
    app: chomby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chomby
  template:
    metadata:
      labels:
        app: chomby
    spec:
      containers:
        - name: chomby
          image: kuthero/chombybot:dev
