k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - argocd.gridlan.com
    secretName: gridlan-com
  rules:
  - host: argocd.gridlan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: argocd-server
          servicePort: 80
